--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Open Gazettes South Africa
+email: info@code4sa.org
 collections:
   gazettes:
     output: true
