--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 # Site settings
 title: Open Gazettes South Africa
 email: info@code4sa.org
+baseurl: /opengazettes
 collections:
   gazettes:
     output: true
