--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@
 title: Open Gazettes South Africa
 email: info@code4sa.org
 baseurl: /opengazettes
+description: Making South African Government Gazettes freely available.
 collections:
   gazettes:
     output: true
