--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,13 @@ title: Open Gazettes South Africa
 email: info@code4sa.org
 baseurl: /opengazettes
 description: Making South African Government Gazettes freely available.
+twitter:
+  username: code4sa
+logo: /img/logo.png
+
+gems:
+  - jekyll-seo-tag
+
 collections:
   gazettes:
     output: true
