--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Open Gazettes South Africa
 email: info@code4sa.org
-baseurl: /opengazettes
+baseurl: 
 description: Making South African Government Gazettes freely available.
 twitter:
   username: code4sa
