About page with technical details

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Open Gazettes South Africa
-email: info@code4sa.org
+email: gazettes@code4sa.org
 baseurl: 
 description: Making South African Government Gazettes freely available.
 twitter:
