Add automated sitemap
Not super important generally since it's so few pages but it's
good practise and an easy way to tell google to reindex soon
to see archive.opengazettes.org.za

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Open Gazettes South Africa
 email: gazettes@code4sa.org
 url: http://opengazettes.org.za
-baseurl: 
+baseurl:
 description: Making South African Government Gazettes freely available.
 twitter:
   username: code4sa
@@ -17,6 +17,7 @@ logo: /img/logo.png
 
 gems:
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 collections:
   gazettes:
