https by default

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Open Gazettes South Africa
 email: gazettes@code4sa.org
-url: http://opengazettes.org.za
+url: https://opengazettes.org.za
 baseurl:
 description: Making South African Government Gazettes freely available.
 twitter:
