gazettes@code4sa.org to gazettes@openup.org.za

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Open Gazettes South Africa
-email: gazettes@code4sa.org
+email: gazettes@openup.org.za
 url: https://opengazettes.org.za
 baseurl:
 description: Making South African Government Gazettes freely available.
